--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js",
+    "prestart": "npm run build",
+    "build": ". ./build.sh"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   },
   "repository": {
     "type": "git",
@@ -15,5 +22,25 @@
   "bugs": {
     "url": "https://github.com/matthewkimber/graphiql-browser/issues"
   },
-  "homepage": "https://github.com/matthewkimber/graphiql-browser#readme"
+  "homepage": "https://github.com/matthewkimber/graphiql-browser#readme",
+  "dependencies": {
+    "express": "^4.13.3",
+    "express-graphql": "^0.5.1",
+    "graphiql": "^0.7.8",
+    "graphql": "^0.7.0",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
+  },
+  "peerDependencies": {
+    "graphql": "^0.6.0 || ^0.7.0",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
+  },
+  "devDependencies": {
+    "babel-cli": "6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2"
+  }
 }
